--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 			NOTE TO VISITORS: Buttons like the 'Login' and 'Submit' are not fully functioning as you may expect since this website was created by students as a project that had points for design and structure alone.<br><br>
 		So you DO NOT require any login details.<br>
 		<font style="color:black">Just Hit Login Without Entering Any Details To Enter The Site..Thank you!</font>
+				<br> Resolution other than 1920*1080 can disrupt the page structure.
 			</div>
 
 				
