--- a/F1 WebPro-8.html
+++ b/F1 WebPro-8.html
@@ -52,8 +52,9 @@ td{color:white;padding:5px;}
 									
 									Why was this site created?<br>
 									This was created as a project that was assigned to students for some points.<br>
-									Ishan and Nathan were one group. Wrecking thier brains to the limits, they developed
-									this site, hoping they can impress the professor and gain a good score!
+									Ishan and me(Nathan) formed one group. Wrecking our brains to the limit, we developed
+									this site in two days just before the deadline, hoping we can impress the professor and gain a good score!<br>
+										And guess what! We scored 19.5/20...Not bad huh?
 									
 									</div><br><br><br><br>
 									<div class="title2"style="text-shadow:-2px 2px 2px  orange;padding:20px;background-color:rgb(0,0,0,0.6)">
